# metaverse_client

./: .creds.example  .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml  build.rs
crates/agent/assets/animations/: idle.glb  kitty_walk_test.glb  stand.glb
crates/agent/assets/skeleton/: skeleton.gltf
crates/agent/src/: avatar.rs  avatar_appearance_handler.rs  default_animations.rs  generate_gltf.rs  generate_model.rs  lib.rs  object_update_handler.rs  skeleton.rs  texture.rs
crates/agent/src/benthic_default_model/: benthic_default_model.gltf  untitled.glb
crates/agent/tests/: avatar_appearance_handler.rs  combine_gltf.rs
crates/agent/tests/example_sceneobjects/: body.json  curves.json  overalls.json  skeleton.gltf  t-shirt.json
crates/core/: .creds.example  .gitignore  Cargo.toml  README.md
crates/core/assets/: README.md
crates/core/src/: agent.rs  avatar.rs  capabilities.rs  core_2.rs  core_subscriber.rs  environment.rs  http_handler.rs  initialize.rs  inventory.rs  lib.rs  objects.rs  session.rs  udp_handler.rs  ui_subscriber.rs
crates/core/src/core/: agent.rs  capabilities.rs  environment.rs  generate_gltf.rs  inventory.rs  mod.rs  objects.rs  session.rs
crates/core/src/transport/: http_handler.rs  mod.rs  udp_handler.rs  ui_event_listener.rs
crates/core/tests/data/: object_update.txt
crates/environment/: Cargo.toml  README.md
crates/environment/src/: cloud.rs  constants.rs  error.rs  generate_gltf.rs  generate_mesh.rs  generate_terrain.rs  generate_triangles.rs  land.rs  layer_handler.rs  lib.rs  terrain_mesh_builder.rs  water.rs  wind.rs
crates/environment/tests/: test_decode.rs  test_land.rs
crates/instantiator/: Cargo.toml  README.md  sim_config.toml
crates/instantiator/src/: config_generator.rs  lib.rs  models.rs  server.rs
crates/instantiator/src/models/: conf_spec.rs  errors.rs  region.rs  server.rs  standalone_spec.rs
crates/instantiator/tests/: server.rs
crates/inventory/: Cargo.toml
crates/inventory/migrations/: 01_create_inventory.sql  02_create_object_update.sql  03_create_agent_table.sql
crates/inventory/migrations/01-create_inventory/: up.sql
crates/inventory/src/: agent.rs  errors.rs  initialize_sqlite.rs  inventory_root.rs  lib.rs  object_update.rs
crates/inventory/tests/: inventory_root.rs
crates/inventory/tests/data/: folder_data_1.txt  folder_data_4.txt  folder_data_5.txt
crates/login/: Cargo.toml  README.md  conf.toml
crates/login/src/: lib.rs  login.rs  models.rs
crates/login/src/models/: errors.rs  login_response.rs  simulator_login_protocol.rs
crates/login/tests/: login.rs
crates/login/tests/test_server/: login_models.py  requirements.txt  test_server.py
crates/messages/: Cargo.toml  README.md  data.txt
crates/messages/src/: agent_update.rs  chat_from_simulator.rs  chat_from_viewer.rs  circuit_code.rs  coarse_location_update.rs  complete_agent_movement.rs  complete_ping_check.rs  disable_simulator.rs  errors.rs  header.rs  layer_data.rs  lib.rs  packet.rs  packet_ack.rs  packet_types.rs  region_handshake.rs  region_handshake_reply.rs  start_ping_check.rs  ui_events.rs
crates/messages/src/agent/: agent_update.rs  agent_wearables_request.rs  agent_wearables_update.rs  avatar_appearance.rs  coarse_location_update.rs  mod.rs
crates/messages/src/capabilities/: capabilities.rs  folder_types.rs  item.rs  item_data.rs  item_types.rs  mesh.rs  mesh_data.rs  mod.rs  scene.rs  scene_object.rs
crates/messages/src/chat/: chat_from_simulator.rs  chat_from_viewer.rs  mod.rs
crates/messages/src/core/: complete_ping_check.rs  disable_simulator.rs  mod.rs  object_update.rs  packet_ack.rs  region_handshake.rs  region_handshake_reply.rs  start_ping_check.rs
crates/messages/src/environment/: layer_data.rs  mod.rs
crates/messages/src/errors/: errors.rs  mod.rs
crates/messages/src/http/: capabilities.rs  environment_data.rs  folder_request.rs  folder_types.rs  item.rs  mesh.rs  mod.rs  scene.rs
crates/messages/src/legacy/: mod.rs
crates/messages/src/login/: circuit_code.rs  complete_agent_movement.rs  errors.rs  login.rs  login_response.rs  login_xmlrpc.rs  logout_request.rs  mod.rs  simulator_login_protocol.rs
crates/messages/src/login_system/: errors.rs  login.rs  login_response.rs  mod.rs  simulator_login_protocol.rs
crates/messages/src/models/: agent_update.rs  chat_from_simulator.rs  chat_from_viewer.rs  circuit_code.rs  client_update_data.rs  coarse_location_update.rs  complete_agent_movement.rs  constants.rs  disable_simulator.rs  header.rs  login.rs  mod.rs  packet.rs  packet_ack.rs  packet_types.rs  use_circuit_code.rs
crates/messages/src/packet/: errors.rs  header.rs  message.rs  mod.rs  packet.rs  packet_bootstrap.rs  packet_types.rs
crates/messages/src/udp/: mod.rs
crates/messages/src/ui/: camera_position.rs  chat_from_simulator.rs  chat_from_viewer.rs  coarse_location_update.rs  disable_simulator.rs  errors.rs  land_update.rs  layer_update.rs  login.rs  logout.rs  (+8 more)
crates/messages/tests/: acks.rs  agent_appearance.rs  agent_update.rs  agent_wearables_update.rs  chat_from_viewer.rs  circuit_code.rs  coarse_location_update.rs  disable_simulator.rs  header.rs  item.rs  login_response.rs  mesh_data.txt  mod.rs  object_update.rs  packet_debugger.rs  parse_mesh_data.rs  region_handshake.rs  scenegroup.rs  simulator_login_protocol.rs  use_circuit_code.rs  wearable_types.rs
crates/session/: Cargo.toml  README.md  sim_config.toml
crates/session/src/: client_subscriber.rs  core.rs  core_subscriber.rs  environment.rs  errors.rs  http_handler.rs  initialize.rs  lib.rs  listen_uds.rs  listener_util.rs  mailbox.rs  main.rs  models.rs  server_subscriber.rs  session.rs  udp_handler.rs  ui_subscriber.rs
crates/session/tests/: chat_test.rs  login_test.rs  session.rs  test_models.rs  uds_test.rs
crates/ui/: .gitignore  Cargo.toml  README.md  build.rs
crates/ui/src/: animation.rs  chat.rs  environment.rs  errors.rs  lib.rs  loading.rs  login.rs  main.rs  plugin.rs  render.rs  session.rs  subscriber.rs  utils.rs
crates/utils/: Cargo.toml  Readme.md
crates/utils/src/: lib.rs
(+142 files in other folders)
