[package]
name = "login"
version = "0.1.0"
authors = ["wgahnagl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = {git = "https://github.com/unnamed-mmo/xml-rpc-rs"}
lazy_static = "1.4.0"
config = "0.11"
sys-info = "0.9.1"
mac_address = "1.1.2"
