[package]
name = "metaverse_login"
version = "0.0.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "login utility for accessing the metaverse"
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = {git = "https://github.com/unnamed-mmo/xml-rpc-rs"}
lazy_static = "1.4.0"
config = "0.11"
sys-info = "0.9.1"
mac_address = "1.1.2"
