[package]
name = "metaverse_agent"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "Agent handling for the open metaverse"
license = "AGPL-3.0-or-later"
edition = "2024"
build = "build.rs"
include = [
    "src/**",
    "Cargo.toml",
    "build.rs",
    "src/benthic_default_model/skeleton.gltf",
    "src/benthic_default_model/skeleton.glb",
]
[dependencies]
metaverse_messages = "0.2.0"
byteorder = "1.5.0"
rgb = "0.8.52"
uuid = "1.18.1"
glam = "0.30.8"
log = "0.4.28"
indexmap = "2.11.4"
serde_json = "1.0.145"

[build-dependencies]
metaverse_messages = "0.2.0"
gltf = "1.4.1"
bytemuck = "1.24.0"
glam = "0.30.8"
uuid = "1.18.1"
indexmap = "2.11.4"
