[package]
name = "metaverse_agent"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "Agent handling for the open metaverse"
license = "AGPL-3.0-or-later"
edition = "2024"
build = "build.rs"
include = [
    "src/**",
    "Cargo.toml",
    "build.rs",
    "src/benthic_default_model/skeleton.gltf",
    "src/benthic_default_model/skeleton.glb",
    "assets/**"
]
[dependencies]
metaverse_messages = {path="../messages/"}
byteorder = "1.5.0"
rgb = "0.8.52"
uuid = "1.19.0"
glam = "0.30.9"
log = "0.4.29"
indexmap = "2.12.1"
serde_json = "1.0.148"
actix = "0.13.5"

strum = "0.27"
strum_macros = "0.27"



[build-dependencies]
metaverse_messages = {path="../messages/"}
gltf = "1.4.1"
bytemuck = "1.24.0"
glam = "0.30.9"
uuid = "1.19.0"
indexmap = "2.12.1"
