[package]
name = "metaverse_agent"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "Agent handling for the open metaverse"
license = "AGPL-3.0-or-later"
edition = "2024"



[dependencies]
metaverse_messages = {path="../messages/"}
benthic_asset_pipeline = {path = "../../../benthic_asset_pipeline/"}
benthic_default_assets = {path = "../../../benthic_default_assets/"}
byteorder = "1.5.0"
rgb = "0.8.53"
uuid = "1.23.1"
glam = "0.30.10"
log = "0.4.29"
indexmap = "2.14.0"
serde_json = "1.0.149"
actix = "0.13.5"

strum = "0.28"
strum_macros = "0.28"

