[package]
name = "metaverse_core"
version = "0.1.3"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "core program for server and client IO"
license = "AGPL-3.0-or-later"
edition = "2024"


[dependencies]
metaverse_messages = {path = "../messages/"}
metaverse_environment = {path = "../environment/", optional = true}
metaverse_agent = {path = "../agent/", optional = true}
metaverse_inventory = {path = "../inventory/", optional = true}

tokio = { version = "1.45.0", features = ["full"] }
env_logger = "0.11"
tempfile = "3.19.1"
log = "0.4"
actix = "0.13.5"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.15"
actix-rt = "2.10"
futures = "0.3.31"
bincode = "1.3.3"
portpicker = "0.1.1"
glam = {version = "0.30.3", features = ["serde"]}
actix-http = "3.11.0"
awc = "3.7.0"
quick-xml = "0.37.5"
serde-llsd = "0.3.6"
gltf-json = "1.4.1"
gltf = "1.4.1"
dirs = "6.0.0"
bytemuck = "1.23.0"
bytes = "1.10.1"
[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# allow for compiling a barebones viewer
[features]
default = ["environment", "agent", "inventory"]

# allow for compiling the viewer without any environment rendering
environment = ["dep:metaverse_environment"]
# allow for compiling the viewer without any agent rendering 
agent = ["dep:metaverse_agent"]

inventory = ["dep:metaverse_inventory"]
