[package]
name = "metaverse_core"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "core program for server and client IO"
license = "AGPL-3.0-or-later"
edition = "2024"

# Include the assets dir, which contains default assets and textures.
include = [
    "src/**",
    "Cargo.toml",
    "assets/**",
]

[dependencies]
metaverse_messages = {path="../messages"}
metaverse_environment = {path="../environment", optional = true}
metaverse_agent = {path="../agent", optional = true}
metaverse_inventory = {path="../inventory", optional = true}
metaverse_mesh = {path="../../../metaverse_mesh"}
serde-llsd-benthic = {path="../../../benthic-serde-llsd"}
benthic_default_assets = {path="../../../benthic_default_assets/"}
tokio = { version = "1.52.1", features = ["full"] }
log = "0.4"
actix = "0.13.5"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.15"
actix-rt = "2.11"
bincode = { version = "2.0.1", features = ["serde"] }
portpicker = "0.1.1"
glam = {version = "0.30.10", features = ["serde"]}
actix-http = "3.12.1"
awc = "3.8.2"
quick-xml = "0.39.2"
dirs = "6.0.0"
bytemuck = "1.25.0"
bytes = "1.11.1"
indexmap = "2.14.0"
jpeg2k = "0.10.1"
image = "0.25.10"
sqlx = {version="0.8.6", features=["runtime-tokio"]}
url = "2.5.8"
rgb = "0.8.53"
[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# allow for compiling a barebones viewer
[features]
default = ["environment", "agent", "inventory"]

# allow for compiling the viewer without any environment rendering
environment = ["dep:metaverse_environment"]
# allow for compiling the viewer without any agent rendering 
agent = ["dep:metaverse_agent"]

inventory = ["dep:metaverse_inventory"]


