[package]
name = "metaverse_environment"
version = "0.0.4"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "metaverse environment data handler"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
bitreader = "0.3.11"
bytemuck = {version = "1.23.0", features = ["derive"] }
byteorder = "1.5.0"
dirs = "6.0.0"
glam = {version="0.30.3", features=["serde"]}
gltf = "1.4.1"
gltf-json = "1.4.1"
log = "0.4.27"
metaverse_messages = {path = "../messages/"}
once_cell = "1.21.3"
twox-hash = "2.1.0"
