[package]
name = "metaverse_environment"
version = "0.3.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "metaverse environment data handler"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
bitreader = "0.3.11"
bytemuck = {version = "1.24.0", features = ["derive"] }
byteorder = "1.5.0"
glam = {version="0.30.8", features=["serde"]}
gltf = "1.4.1"
gltf-json = "1.4.1"
log = "0.4.28"
metaverse_messages = "0.3.0"
once_cell = "1.21.3"
twox-hash = "2.1.2"
metaverse_mesh = "0.2.0"
uuid = "1.18.1"
image = "0.25.8"
