[package]
name = "metaverse_instantiator"
version = "0.0.1"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "open metaverse simulator instantiator"
edition = "2021"
license = "AGPL-3.0-or-later"
keywords = ["open_metaverse", "opensimulator"]

[dependencies]
zip-extract = "0.1.3"
reqwest = { version = "0.11", features = ["blocking"]}
rust-ini = "0.21.0"
config = "0.11"
log = "0.4"
env_logger = "0.9"
actix = "0.13.5"
actix-rt = "2.7"
regex = "1"
tokio = { version = "1", features = ["full"] }
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
serial_test = "3.1.1"
