[package]
name = "metaverse_instantiator"
version = "0.0.4"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "open metaverse simulator instantiator"
edition = "2024"
license = "AGPL-3.0-or-later"
keywords = ["open_metaverse", "opensimulator"]

[dependencies]
zip-extract = "0.2.1"
reqwest = { version = "0.12", features = ["blocking"]}
rust-ini = "0.21.1"
config = "0.15"
log = "0.4"
env_logger = "0.11"
actix = "0.13.5"
actix-rt = "2.10"
regex = "1"
tokio = { version = "1", features = ["full"] }
[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
serial_test = "3.2.0"
