[package]
name = "metaverse_inventory"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "inventory handling for the open metaverse"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
metaverse_messages = {path="../messages/"}
anyhow = "1.0.100"
awc = "3.8.1"
dirs = "6.0.0"
log = "0.4.28"
serde-llsd-benthic = "0.0.1"
quick-xml = "0.38.3"
serde = "1.0.228"
thiserror = "2.0.17"
uuid = "1.18.1"
rusqlite = {version = "0.37.0", features=["bundled"]}
rusqlite_migration = {version ="2.3.0", features=["from-directory"]}
include_dir = "0.7.4"
serde_json = "1.0.145"

[dev-dependencies]
tokio = {version = "1.48.0", features=["test-util"]}
httpmock = "0.8.2"
tempfile = "3.23.0"
