[package]
name = "metaverse_login"
version = "0.1.2"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "login utility for accessing the metaverse"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = "0.15.1"
lazy_static = "1.4.0"
metaverse_instantiator = "0.0.4"
config = "0.11"
sys-info = "0.9.1"
mac_address = "1.1.2"
md-5 = "0.9.1"
zip-extract = "0.1.3"
reqwest = { version = "0.11", features = ["blocking"]}
rust-ini = "0.21.0"
log = "0.4"
env_logger = "0.9"
actix = "0.13.5"
actix-rt = "2.7"
hyper = { version = "0.14" }  
regex = "1"
tokio = { version = "1", features = ["full"] }
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
