[package]
name = "metaverse_messages"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "packet definitions for the open metaverse"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
serde-llsd-benthic = {path = "../../../benthic-serde-llsd/"}
benthic_default_assets = {path = "../../../benthic_default_assets/"}
benthic_protocol = {path = "../../../benthic_protocol/"}
log = "0.4"
byteorder = "1.5.0"
mac_address = "1.1.8"
sys-info = "0.9.1"
bitflags = "2.11.1"
md-5 = "0.10.6"
glam = {version="0.30.10", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.149"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.18"
rgb = {version="0.8.53", features=["serde"]}
quick-xml = "0.39.2"
flate2 = "1.1.9"
bytemuck = "1.25.0"
strum = "0.28.0"
strum_macros = "0.28.0"
indexmap = {version="2.14.0", features = ["serde"]}
chrono = "0.4.44"
anyhow = "1.0.102"
base64 = "0.22.1"
once_cell = "1.21.4"
[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

