[package]
name = "metaverse_session"
version = "0.0.3"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "metaverse session handler"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15"
metaverse_messages = {path = "../messages/"}
metaverse_instantiator = "0.0.4"
regex = "1"
xmlrpc = "0.15.1"
actix-web = "4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-test = "0.4.4"
env_logger = "0.11"
tempfile = "3.17.1"
log = "0.4"
actix = "0.13.5"
hex = "0.4"
rand = "0.9"
futures = "0.3.31"
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.14"

actix-rt = "2.10"
[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
