[package]
name = "metaverse_session"
version = "0.1.1"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "metaverse session handler"
license = "AGPL-3.0-or-later"
edition = "2024"


[dependencies]
metaverse_messages = {path = "../messages/"}
metaverse_environment = {path = "../environment/", optional = true}
tokio = { version = "1.45.0", features = ["full"] }
env_logger = "0.11"
tempfile = "3.19.1"
log = "0.4"
actix = "0.13.5"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5.15"
actix-rt = "2.10"
futures = "0.3.31"
bincode = "1.3.3"
portpicker = "0.1.1"
glam = "0.30.3"
[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# allow for compiling a barebones viewer
[features]
default = ["environment"]

# allow for compiling the viewer without any environment rendering
environment = ["dep:metaverse_environment"]
