[package]
name = "ui"
version = "0.1.1"
edition = "2024"
resolver = "2"

[dependencies]
metaverse_session = {path = "../session/"}
metaverse_messages = {path = "../messages/"}

#disable sound for bevy
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_ui",
    "bevy_text",
    "bevy_state",
    "bevy_picking",
    "bevy_window",
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_log",
    "tonemapping_luts"
]}

bevy_egui = "0.34.1"
bevy_panorbit_camera = "0.26.0"

egui_xml = "0.1.5"
egui_extras = "0.31.1"
egui = "0.31.1"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.10.0"
accesskit = "0.19.0"
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
serde_json = "1.0"
portpicker = "0.1.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6.0.0"
log = "0.4.27"
[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
