[package]
name = "ui"
version = "0.1.1"
edition = "2024"
resolver = "2"

[dependencies]
metaverse_core = {path = "../core/"}
metaverse_messages = {path = "../messages/"}

#disable sound for bevy
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_ui",
    "bevy_text",
    "bevy_state",
    "bevy_picking",
    "bevy_window",
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_log",
    "tonemapping_luts",
    "dynamic_linking",
    "zstd_rust"
]}

bevy_egui = "0.37.1"
bevy_panorbit_camera = "0.29.0"

egui = "0.33.0"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.11.0"
accesskit = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
serde_json = "1.0"
portpicker = "0.1.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6.0.0"
log = "0.4.28"
thiserror = "2.0.17"
[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
