[package]
name = "benthic_ui"
version = "0.2.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "Bevy UI plugin for open metaverse clients"
license = "AGPL-3.0-or-later"
edition = "2024"
resolver = "2"
build = "build.rs"

[build-dependencies]
benthic_default_assets = {path="../../../benthic_default_assets/"}

[dependencies]
metaverse_core = {path="../core"}
benthic_default_assets = {path="../../../benthic_default_assets/"}
metaverse_messages = {path="../messages"}
metaverse_agent = {path="../agent"}

#disable sound for bevy
bevy = { version = "0.18", default-features = false, features = [
    "bevy_animation",
    "bevy_winit",
    "bevy_render",
    "bevy_scene",
    "bevy_pbr",
    "bevy_ui",
    "bevy_text",
    "bevy_state",
    "bevy_picking",
    "bevy_window",
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_log",
    "tonemapping_luts",
    "dynamic_linking",
    "zstd_rust",
    "png",
    "jpeg"
]}
bevy_gltf = { version = "0.18", features = ["bevy_animation"] }
bevy_egui = "0.39.1"
bevy_panorbit_camera = "0.34.0"
egui = "0.33.3"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.11.0"
accesskit = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
serde_json = "1.0"
portpicker = "0.1.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6.0.0"
log = "0.4.29"
thiserror = "2.0.18"
bevy_heightmap = "0.7.0"
[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
