[package]
name = "metaverse_utils"
version = "0.0.0"
authors = ["Skyler Clark<skylerjaneclark@gmail.com>"]
description = "simple macro utilities for metaverse clients"
license = "AGPL-3.0-or-later"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

